# dedupcollage

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-05-16-scan-discovery-resume.md
docs/superpowers/specs/: 2026-05-16-scan-discovery-resume-design.md
packaging/: dedupcollage.spec  fetch_third_party.py  installer.iss
src/dedupcollage/: __init__.py  __main__.py  _paths.py  analyze.py  cli.py  cluster.py  db.py  discovery.py  fingerprint.py  governor.py  integrity.py  metadata.py  organize.py  perceptual.py  scan.py  select.py  utils.py
src/dedupcollage/gui/: __init__.py  __main__.py  app.py  main_window.py  selection.py  worker.py
tests/: conftest.py  test_scan_discovery.py  test_smoke.py
